@@ -7,6 +7,7 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
 import java.io.IOException;
+import java.time.LocalDateTime;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -26,7 +27,6 @@ public class HotelServiceTest {
         fileReader = mock(IFileReader.class);
     }
 
-    // IOException added ONLY for when(fileReader.readAll()). This is required for the test to execute.
     @Test
     public void testGetForCity_IOError() throws IOException {
         when(fileReader.readAll(anyString())).thenThrow(new IOException());
@@ -40,7 +40,7 @@ public class HotelServiceTest {
         when(fileReader.readAll(anyString())).thenReturn("{\"Paris\":[" + hotelA + "," + hotelB + "]}");
         HotelService service = new HotelService(fileReader);
 
-        List<Hotel> hotels = service.getForCity("Paris");
+        List<Hotel> hotels = service.getForCity("Paris", LocalDateTime.now());
 
         assertEquals(2, hotels.size());
 
@@ -64,7 +64,7 @@ public class HotelServiceTest {
         when(fileReader.readAll(anyString())).thenReturn("{}");
         HotelService service = new HotelService(fileReader);
 
-        List<Hotel> hotels = service.getForCity("NonexistentCity");
+        List<Hotel> hotels = service.getForCity("NonexistentCity", LocalDateTime.now());
 
         assertTrue(hotels.isEmpty());
     }
@@ -74,7 +74,7 @@ public class HotelServiceTest {
         when(fileReader.readAll(anyString())).thenReturn("{\"Paris\":[]}");
         HotelService service = new HotelService(fileReader);
 
-        List<Hotel> hotels = service.getForCity("Paris");
+        List<Hotel> hotels = service.getForCity("Paris", LocalDateTime.now());
 
         assertTrue(hotels.isEmpty());
     }
@@ -85,7 +85,7 @@ public class HotelServiceTest {
         when(fileReader.readAll(anyString())).thenReturn("{\"Paris\":[" + invalid + "]}");
         HotelService service = new HotelService(fileReader);
 
-        assertThrows(NumberFormatException.class, () -> service.getForCity("Paris"));
+        assertThrows(NumberFormatException.class, () -> service.getForCity("Paris", LocalDateTime.now()));
     }
 
     @Test
@@ -94,12 +94,12 @@ public class HotelServiceTest {
         when(fileReader.readAll(anyString())).thenReturn("{\"Paris\":[" + hotelA + "," + hotelB + "],\"London\":[" + hotelC + "]}");
         HotelService service = new HotelService(fileReader);
 
-        List<Hotel> parisHotels = service.getForCity("Paris");
-        List<Hotel> londonHotels = service.getForCity("London");
+        List<Hotel> parisHotels = service.getForCity("Paris", LocalDateTime.now());
+        List<Hotel> londonHotels = service.getForCity("London", LocalDateTime.now());
 
         assertEquals(2, parisHotels.size(), "Expected two hotels in Paris");
         assertEquals(1, londonHotels.size(), "Expected one hotel in London");
-        assertEquals("Hotel C", londonHotels.getFirst().name(), "Wrong hotel name in London");
+        assertEquals("Hotel C", londonHotels.get(0).name(), "Wrong hotel name in London");
     }
 
     @Test
@@ -107,7 +107,7 @@ public class HotelServiceTest {
         when(fileReader.readAll(anyString())).thenReturn("{}");
         HotelService service = new HotelService(fileReader);
 
-        List<Hotel> hotels = service.getForCity("AnyCity");
+        List<Hotel> hotels = service.getForCity("AnyCity", LocalDateTime.now());
 
         assertTrue(hotels.isEmpty(), "Expected no hotels when city data is empty");
     }
@@ -118,7 +118,7 @@ public class HotelServiceTest {
         when(fileReader.readAll(anyString())).thenReturn("{\"Paris\":[" + hotelC + "]}");
         HotelService hotelServiceSpy = new HotelService(fileReader);
 
-        List<Hotel> hotels = hotelServiceSpy.getForCity("Paris");
+        List<Hotel> hotels = hotelServiceSpy.getForCity("Paris", LocalDateTime.now());
 
         assertEquals(1, hotels.size());
         assertEquals("123 Main St", hotels.getFirst().address());
